Fixed layout issue in smaller screens.

--- a/assets/sass/layout/views/_projects.scss
+++ b/assets/sass/layout/views/_projects.scss
@@ -116,6 +116,7 @@
 									margin: 0;
 									padding: 0;
 									justify-content: space-between;
+									flex-wrap: wrap;
 								}
 
 								@media screen and (min-width: 768px) {
